layout and slugs

--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.2.0",
     "autoprefixer": "^9.8.6",
+    "gray-matter": "^4.0.2",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
     "tailwindcss": "^1.9.6"
+  },
+  "devDependencies": {
+    "@svgr/cli": "^5.4.0",
+    "@svgr/webpack": "^5.4.0"
   }
 }
