--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^6.11.0",
+    "react-query": "^2.26.2",
+    "react-query-devtools": "^2.6.3",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "tailwindcss": "^1.9.6"
   },
   "devDependencies": {
     "@svgr/cli": "^5.4.0",
-    "@svgr/webpack": "^5.4.0"
+    "@svgr/webpack": "^5.4.0",
+    "@types/node": "^14.14.7",
+    "@types/react": "^16.9.56",
+    "typescript": "^4.0.5"
   }
 }
