--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/typography": "^0.2.0",
     "autoprefixer": "^9.8.6",
     "gray-matter": "^4.0.2",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
