--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.2.0",
     "autoprefixer": "^9.8.6",
+    "classnames": "^2.2.6",
     "gray-matter": "^4.0.2",
     "isomorphic-unfetch": "^3.1.0",
     "next": "10.0.1",
