--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "react-hook-form": "^6.11.0",
     "react-query": "^2.26.2",
     "react-query-devtools": "^2.6.3",
-    "remark": "^13.0.0",
+    "remark": "^12.0.0",
     "remark-html": "^13.0.1",
+    "remark-prism": "1.1.14",
     "tailwindcss": "^1.9.6"
   },
   "devDependencies": {
