--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/react": "^1.6.21",
     "@tailwindcss/typography": "^0.2.0",
     "autoprefixer": "^9.8.6",
     "classnames": "^2.2.6",
     "gray-matter": "^4.0.2",
     "isomorphic-unfetch": "^3.1.0",
+    "mdx-embed": "0.0.14",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -20,8 +22,10 @@
     "react-query": "^2.26.2",
     "react-query-devtools": "^2.6.3",
     "remark": "^12.0.0",
+    "remark-autolink-headings": "^6.0.1",
     "remark-html": "^13.0.1",
-    "remark-prism": "1.1.14",
+    "remark-prism": "^1.1.14",
+    "remark-slug": "^6.0.0",
     "tailwindcss": "^1.9.6"
   },
   "devDependencies": {
