--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "dependencies": {
     "@mdx-js/react": "^1.6.21",
     "@tailwindcss/typography": "^0.2.0",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.0.2",
     "classnames": "^2.2.6",
     "gray-matter": "^4.0.2",
     "isomorphic-unfetch": "^3.1.0",
     "mdx-embed": "0.0.14",
     "next": "10.0.1",
+    "postcss": "^8.1.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.11.0",
@@ -26,7 +27,7 @@
     "remark-html": "^13.0.1",
     "remark-prism": "1.1.14",
     "remark-slug": "^6.0.0",
-    "tailwindcss": "^1.9.6"
+    "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
     "@svgr/cli": "^5.4.0",
