--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdx-js/react": "^1.6.21",
     "@tailwindcss/typography": "^0.2.0",
     "autoprefixer": "^10.0.2",
+    "canvas-confetti": "^1.3.2",
     "classnames": "^2.2.6",
     "gray-matter": "^4.0.2",
     "isomorphic-unfetch": "^3.1.0",
