--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "remark": "^12.0.0",
     "remark-autolink-headings": "^6.0.1",
     "remark-html": "^13.0.1",
-    "remark-prism": "1.1.14",
+    "remark-prism": "^1.3.2",
     "remark-slug": "^6.0.0",
     "tailwindcss": "^2.0.1"
   },
