group unit by module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,9 @@
       ],
       "@styles/*": [
         "src/styles/*"
+      ],
+      "@utils/*": [
+        "src/utils/*"
       ]
     }
   },
