--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.0.2",
     "canvas-confetti": "^1.3.2",
     "classnames": "^2.2.6",
+    "framer-motion": "^2.9.5",
     "globby": "^11.0.1",
     "gray-matter": "^4.0.2",
     "isomorphic-unfetch": "^3.1.0",
